# syneroym-prototype

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.gemini/: GEMINI.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  security.yml
app-cli/: Cargo.toml  README.md  config.toml
app-cli/src/: args.rs  config.rs  main.rs
app-cli/tests/: cli.rs
app-cmdline/: README.md
app-syneroym/: package.json
app-syneroym/src/: App.tsx
app-syneroym/src-tauri/icons/: icon.icns
app-xplatform/: .gitignore  README.md  pnpm-lock.yaml  tsconfig.json
app-xplatform/src-tauri/: Cargo.toml  tauri.conf.json
app-xplatform/src-tauri/src/: lib.rs
crates/: README.md
crates/common/: Cargo.toml
docs/: developer.md
docs/ai/: ai.md
docs/decisions/: README.md
examples/: README.md
examples/miniapp-demo1-wasm/: .gitignore  README.md  build.sh
examples/miniapp-demo1-wasm/client/: package.json
examples/miniapp-demo1-wasm/client/src/: App.tsx  LastUpdated.tsx
examples/miniapp-demo1-wasm/core/: Cargo.toml
examples/miniapp-demo1-wasm/core/src/: bindings.rs  build.rs  lib.rs  runtime.rs  types.rs
examples/miniapp-demo1-wasm/core/src/capabilities/: db.rs  files.rs  mesaging.rs  messaging.rs  mod.rs  streams.rs
examples/miniapp-demo1-wasm/guest/: Cargo.toml
examples/miniapp-demo1-wasm/guest/src/: bindings.rs  lib.rs  types.rs
examples/miniapp-demo1-wasm/guest/src/handlers/: comments.rs  files.rs  mod.rs  streams.rs
examples/miniapp-demo1-wasm/guest/wit/: handler.wit
examples/miniapp-demo1-wasm/host/: Cargo.toml
examples/miniapp-demo1-wasm/host/src/: main.rs
examples/miniapp-demo1-wasm/transports/grpc/: Cargo.toml
examples/miniapp-demo1-wasm/transports/grpc/proto/: service.proto
examples/miniapp-demo1-wasm/transports/grpc/src/: adapter.rs  lib.rs
examples/miniapp-demo1-wasm/transports/http/: Cargo.toml
examples/miniapp-demo1-wasm/transports/http/src/: adapter.rs  adapters.rs  lib.rs
examples/miniapp-demo1-wasm/wit/: world.wit
examples/miniapp-demo1-web/: .gitignore  Cargo.toml  README.md  comments.db
examples/miniapp-demo1-web/client/: index.html  package-lock.json  vite.config.ts
examples/miniapp-demo1-web/client/src/: App.tsx  FilesManager.tsx  LastUpdated.tsx  RecentComments.tsx  index.tsx
examples/miniapp-demo1-web/src/: main.rs
examples/miniapp-demo1-web/static/: page1.html
lib-js/: README.md
lib-js/ui-solid/: LICENSE  package.json  tsconfig.json
lib-js/ui-solid/dev/: App.tsx  index.css
lib-js/ui-solid/test/: index.test.tsx  server.test.tsx
lib-js/ui-styles/: package-lock.json  package.json
lib-rust/: README.md
lib-rust/alpn-base/: Cargo.toml
lib-rust/alpn-base/src/: lib.rs
lib-rust/alpn-http/: Cargo.toml
lib-rust/alpn-http/src/: lib.rs
lib-rust/app-host/: Cargo.toml
lib-rust/app-host/src/: lib.rs
lib-rust/common/: Cargo.toml
lib-rust/common/benches/: config_bench.rs
lib-rust/common/src/: config.rs  iroh_utils.rs  lib.rs  protocol_utils.rs  stream.rs  utils.rs
lib-rust/net/: Cargo.toml
lib-rust/net-iroh/: Cargo.toml
lib-rust/net-iroh/src/: lib.rs
lib-rust/net-webrtc/: Cargo.toml
lib-rust/net-webrtc/src/: lib.rs  stream.rs
lib-rust/net/src/: lib.rs
lib-rust/node/: Cargo.toml
lib-rust/node/src/: lib.rs
lib-rust/peer/: Cargo.toml
lib-rust/peer-proxy-http/: Cargo.toml
lib-rust/peer-proxy-http/src/: lib.rs
lib-rust/peer-web-gateway/: Cargo.toml
lib-rust/peer-web-gateway/src/: lib.rs
lib-rust/peer-web-gateway/templates/: index.html  peer-proxy.html  sw.js
lib-rust/peer/src/: lib.rs
lib-rust/peernode/: Cargo.toml
lib-rust/peernode-proxy-http/: Cargo.toml
lib-rust/peernode-proxy-http/src/: lib.rs
lib-rust/peernode-web-gateway/: Cargo.toml
lib-rust/peernode-web-gateway/src/: lib.rs
lib-rust/peernode-web-gateway/templates/: index.html  sw.js
lib-rust/peernode/src/: lib.rs
lib-rust/protocol-base/: Cargo.toml
lib-rust/protocol-base/src/: lib.rs
lib-rust/protocol-http/: Cargo.toml
lib-rust/protocol-http/src/: lib.rs
lib-rust/rpc/: Cargo.toml
lib-rust/signaling-server/: Cargo.toml
lib-rust/signaling-server/src/: lib.rs
lib-rust/store-interface/: Cargo.toml
lib-rust/store-interface/src/: lib.rs
lib-rust/store-sqlite/: Cargo.toml
lib-rust/store-sqlite/src/: lib.rs
scripts/: coverage.sh
syneroym/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
syneroym/src-tauri/: Cargo.toml  tauri.conf.json
syneroym/src-tauri/src/: main.rs
