[workspace]
members = [
    "lib-rust/*",
    "app-xplatform/src-tauri",
    "app-cli",

    "examples/miniapp-demo1-web",

    # These wasm will go into the lib-rust folder later, and only one top level example will remain
    "examples/miniapp-demo1-wasm/core",
    "examples/miniapp-demo1-wasm/transports/http",
    "examples/miniapp-demo1-wasm/transports/grpc",
    "examples/miniapp-demo1-wasm/host",
    "examples/miniapp-demo1-wasm/guest",
]
resolver = "3"

# Profiles for app size https://v2.tauri.app/concept/size/
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Syneroym Devs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/syneroym/syneroym"

[workspace.dependencies]
common = { package = "syneroym-common", path = "lib-rust/common" }
net = { package = "syneroym-net", path = "lib-rust/net" }
net-iroh = { package = "syneroym-net-iroh", path = "lib-rust/net-iroh" }
net-webrtc = { package = "syneroym-net-webrtc", path = "lib-rust/net-webrtc" }
signaling-server = { package = "syneroym-signaling-server", path = "lib-rust/signaling-server" }
protocol-base = { package = "syneroym-protocol-base", path = "lib-rust/protocol-base" }
protocol-http = { package = "syneroym-protocol-http", path = "lib-rust/protocol-http" }
store-interface = { package = "syneroym-store-interface", path = "lib-rust/store-interface" }
store-sqlite = { package = "syneroym-store-sqlite", path = "lib-rust/store-sqlite" }
app-host = { package = "syneroym-app-host", path = "lib-rust/app-host" }
peer = { package = "syneroym-peer", path = "lib-rust/peer" }

# Common external dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Wasmtime
wasmtime = "25.0"
wasmtime-wasi = "25.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
futures = "0.3"
bytes = "1.7"
mime_guess = "2.0"
