[package]
name = "syneroym-cli"
description = "Run a syneroym peer node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "syneroym-cli"
path = "src/main.rs"

[dependencies]
common.workspace = true
node.workspace = true
figment = { version = "0.10.19", features = ["toml", "env"] }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"