[package]
name = "miniapp-demo1-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.8"
clap = { workspace = true }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
tokio = { workspace = true, features = ["full"] }
