[package]
name = "miniapp-demo1-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.8"
clap = { workspace = true }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
