[package]
name = "syneroym-app-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
store-interface = { package = "syneroym-store-interface", path = "../store-interface" }
anyhow.workspace = true
