[package]
name = "syneroym-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
async-trait = "0.1.89"
iroh = "0.95"
tokio.workspace = true
tracing.workspace = true
tls-parser = "0.12.2"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "config_bench"
harness = false
