[package]
name = "syneroym-net-iroh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
app-host.workspace = true
protocol-base.workspace = true
anyhow.workspace = true
tokio.workspace = true
iroh = "0.95"
n0-error = "0.1"
