[package]
name = "syneroym-net-webrtc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
app-host.workspace = true
protocol-base.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
webrtc = "0.10"
base64 = "0.22"
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.7"
signaling-server = { package = "syneroym-signaling-server", path = "../signaling-server" }