[package]
name = "syneroym-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
net = { package = "syneroym-net", path = "../net" }
net-iroh = { package = "syneroym-net-iroh", path = "../net-iroh" }
net-webrtc = { package = "syneroym-net-webrtc", path = "../net-webrtc" }
protocol-http = { package = "syneroym-protocol-http", path = "../protocol-http" }
store-interface = { package = "syneroym-store-interface", path = "../store-interface" }
store-sqlite = { package = "syneroym-store-sqlite", path = "../store-sqlite" }
app-host = { package = "syneroym-app-host", path = "../app-host" }
protocol-base = { package = "syneroym-protocol-base", path = "../protocol-base" }
peer-proxy-http = { package = "syneroym-peer-proxy-http", path = "../peer-proxy-http" }
signaling-server = { package = "syneroym-signaling-server", path = "../signaling-server" }
peer-web-gateway = { package = "syneroym-peer-web-gateway", path = "../peer-web-gateway" }
iroh = "0.95"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
