[package]
name = "syneroym-peerproxy-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
anyhow = "1.0"
iroh = "0.95"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
bytes = "1"
protocol-base = { package = "syneroym-protocol-base", path = "../protocol-base" }
tokio-util = { version = "0.7", features = ["io"] }
http-body-util = "0.1"
