[package]
name = "syneroym-peernode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
net = { package = "syneroym-net", path = "../net" }
net-iroh = { package = "syneroym-net-iroh", path = "../net-iroh" }
protocol-http = { package = "syneroym-protocol-http", path = "../protocol-http" }
store-interface = { package = "syneroym-store-interface", path = "../store-interface" }
store-sqlite = { package = "syneroym-store-sqlite", path = "../store-sqlite" }
app-host = { package = "syneroym-app-host", path = "../app-host" }
protocol-base = { package = "syneroym-protocol-base", path = "../protocol-base" }
peernode-proxy-http = { package = "syneroym-peerproxy-http", path = "../peernode-proxy-http" }
iroh = "0.95"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
