[package]
name = "syneroym-protocol-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
app-host = { package = "syneroym-app-host", path = "../app-host" }
anyhow.workspace = true
async-trait = "0.1"
