[package]
name = "syneroym-store-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
anyhow.workspace = true
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
