[package]
name = "syneroym-store-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { package = "syneroym-common", path = "../common" }
store-interface = { package = "syneroym-store-interface", path = "../store-interface" }
anyhow.workspace = true
async-trait = "0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tracing.workspace = true
