[package]
name = "wasm-service-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

rusqlite = { workspace = true }

futures = { workspace = true }
bytes = { workspace = true }
mime_guess = { workspace = true }

async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io", "codec"] }

[build-dependencies]
wasmtime = { workspace = true }
