[package]
name = "wasm-service-guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.25.0"
serde = { workspace = true }
mime_guess = "2.0.4"
serde_json = { workspace = true }
chrono = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
