[package]
name = "wasm-service-guest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.30" }
wit-bindgen-rt = { version = "0.30", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
mime_guess = { workspace = true }

[package.metadata.component]
package = "wasm:service"

[package.metadata.component.target]
path = "../wit"
