[package]
name = "wasm-service-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
wasm-service-core = { path = "../core" }
wasm-service-http = { path = "../transports/http" }
wasm-service-grpc = { path = "../transports/grpc" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

rusqlite = { workspace = true }
