[package]
name = "wasm-service-http"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-service-core = { path = "../../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
hyper = "1.4"
futures = { workspace = true }
bytes = { workspace = true }

tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
mime_guess = { workspace = true }
